--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.feasy</groupId>
+	<groupId>com.finneasy</groupId>
 	<artifactId>part1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>part1</name>
